# todo-ddd-django-hexagonal

./: manage.py  pyproject.toml  pytest.ini
tododdd/: asgi.py  settings.py  urls.py  wsgi.py
tododdd/task/application/: command_handlers.py  commands.py  dto.py  queries.py  query_handlers.py
tododdd/task/domain/: exception.py  model.py  repository.py  services.py
tododdd/task/infrastructure/task/: apps.py  models.py  repository.py  schema.py  services.py  views.py
tododdd/task/infrastructure/task/migrations/: 0001_initial.py
tododdd/task/tests/integration/infrastructure/task/: test_repository.py
tododdd/task/tests/unit/application/: test_use_cases.py
tododdd/task/tests/unit/intrastructure/: test_use_cases.py
